--- a/CoreAdmin.Common/CoreAdmin.Common.csproj
+++ b/CoreAdmin.Common/CoreAdmin.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
 
