--- a/CoreAdmin/appsettings.json
+++ b/CoreAdmin/appsettings.json
@@ -1,7 +1,18 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Log4Net": {
+      "Name": "CoreAdmin"
     }
   },
   "AllowedHosts": "*"
